name:                blog
version:             0.1.0.0
synopsis:            My personal static site
description:         My personal static site
homepage:            https://github.com/vjeranc/vjeranc.github.io
license:             BSD3
license-file:        LICENSE
author:              Vjeran Crnjak
maintainer:          vjeran.crnjak@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers == 0.5.*
                     , binary == 0.7.*
                     , hakyll == 4.6.*
                     , pandoc == 1.13.*
                     , filepath == 1.3.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vjeranc/vjeranc.github.io
